# onlyew

./: .gitignore  .prettierrc  Cargo.toml  Trunk.toml  index.html  justfile  modal.css  package.json  pagination.css  pnpm-lock.yaml  styles.css
src/: main.rs  pagination.rs
src/components/: mod.rs
src/components/dialog/: dialog_content.rs  dialog_footer.rs  dialog_header.rs  dialog_title.rs  mod.rs
src/components/modal/: mod.rs
src/components/pagination/: mod.rs
src/components/segmented_control/: control_item.rs  mod.rs
src/components/sidebar/: mod.rs  sidebar_content.rs  sidebar_footer.rs  sidebar_header.rs  sidebar_item.rs  sidebar_toggle.rs
src/components/tabs/: mod.rs  tab.rs  tab_list.rs  tab_panel.rs
src/contexts/: mod.rs  sidebar_context.rs  tabs_context.rs
src/pages/: dialog.rs  home.rs  mod.rs  modal.rs  pagination.rs  segmented_control.rs  tabs.rs
src/pagination/: mod.rs
src/route/: mod.rs
styles/: base.css  dialog.css  modal.css  pagination.css  segmented_control.css  sidebar.css  tabs.css  tailwind.css
